--- a/styles.css
+++ b/styles.css
@@ -5,47 +5,47 @@ body {
  text-rendering:optimizeLegibility;
  -webkit-font-smoothing:antialiased;
  padding:20px 0;
- font-size:10pt
+ font-size:10pt;
 }
 .content {
  width:500px;
  margin:0 auto;
- overflow:hidden
+ overflow:hidden;
 }
 @media only screen and (min-height: 250px) and (min-width: 520px),screen and (min-height: 400px) and (max-width: 520px) {
  .container {
   width:100%;
   height:100%;
-  position:absolute
+  position:absolute;
  }
  .container {
   height:100%;
   position:absolute;
   top:0;
-  left:0
+  left:0;
  }
  .content {
   position:absolute;
   top:50%;
   left:50%;
   margin-top:-125px;
-  margin-left:-250px
+  margin-left:-250px;
  }
 }
 @media screen and (min-height: 400px) and (max-width: 520px) {
  .content {
   margin-top:-180px;
   margin-left:0;
-  left:0
+  left:0;
  }
 }
 @media screen and (max-width: 520px) {
  .content {
-  width:100%
+  width:100%;
  }
  .block {
   float:none;
   width:100%;
-  text-align:center
+  text-align:center;
  }
 }
